Fixed some verbage

--- a/commitments/templates/managetime/kummitment_filter.html
+++ b/commitments/templates/managetime/kummitment_filter.html
@@ -4,11 +4,10 @@
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
-<li class="breadcrumb-item active">Task List</li>
+<li class="breadcrumb-item active">Kummitment List</li>
 {% endblock %}
 
 {% block content %}
-<h1>Tunapanda Tasks</h1>
 
 <div class="container">
   <div class="row">
@@ -16,18 +15,12 @@
     <div class="col-sm-8">
       <br>
       <h3>Statistics</h3>
-      <strong>Tasks: 175</strong> <br>
+      <strong>Kummitments: 175</strong> <br>
       - Completed: 92 <br>
       - Past deadline: 13 <br>
       - Past kummitment: 8 <br>
       - In progress: 37 <br>
       - Not started: 25 <br><br>
-      <strong>Projects: 12</strong><br>
-      - Project roles: 23
-      <br><br>
-      <p><strong>Circles: 5 </strong><br>
-      - Circle roles: 36 <br>
-      - Circle reports: 4
       <strong></strong>
 
 
@@ -50,20 +43,20 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>Task</th>
-        <th>Description</th>
+        <th>Kummitment</th>
+        <th>Kummitor</th>
         <th>Deadline</th>
-        <th>Creator</th>
+        <th>Status</th>
       </tr>
     </thead>
     <tbody>
-      {% for task in task_list %}
+      {% for kummitment in kummitment_list %}
         <div class="row">
           <tr>
-            <td><a href="{{ task.get_absolute_url }}">{{ task.subject }}</a></td>
-            <td>{{ task.description }}</td>
-            <td>{{ task.deadline }}</td>
-            <td>{{ task.created_by }}</td>
+            <td><a href="{{ kummitment.get_absolute_url }}">{{ kummitment.task }}</a></td>
+            <td>{{ kummitment.kummitor }}</td>
+            <td>{{ kummitment.deadline }}</td>
+            <td>{{ kummitment.status }}</td>
           </tr>
         </div>
       {% endfor %}
