Add more views for roles and circles, update landing page, improve layout/styling

--- a/commitments/templates/managetime/kummitment_detail.html
+++ b/commitments/templates/managetime/kummitment_detail.html
@@ -2,7 +2,7 @@
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
-{# <li class="breadcrumb-item"><a href="{% url 'kummitment-list' %}">Kummitments</a></li> #}
+<li class="breadcrumb-item"><a href="{% url 'kummitment-list' %}">Kummitments</a></li>
 <li class="breadcrumb-item active">View Kummitment</li>
 {% endblock %}
 
