--- a/commitments/templates/managetime/kummitment_form.html
+++ b/commitments/templates/managetime/kummitment_form.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
-{# <li class="breadcrumb-item"><a href="{% url 'kummitment-list' %}">Kummitments</a></li> #}
+<li class="breadcrumb-item"><a href="{% url 'kummitment-list' %}">Kummitments</a></li>
 <li class="breadcrumb-item active">Make Kummitment</li>
 {% endblock %}
 
