--- a/commitments/templates/managetime/circle_filter.html
+++ b/commitments/templates/managetime/circle_filter.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
-<li class="breadcrumb-item active">Kummitment</li>
+<li class="breadcrumb-item active">Circles</li>
 {% endblock %}
 
 {% block content %}
@@ -14,27 +14,28 @@
 
     <div class="col-sm-8">
       <br>
-      <h3>Statistics</h3>
-      <strong>Kummitments: 175</strong> <br>
-      - Completed: 92 <br>
-      - Past deadline: 13 <br>
-      - Past kummitment: 8 <br>
-      - In progress: 37 <br>
-      - Not started: 25 <br><br>
+      <h3>Statistics [currently fake data]</h3>
+      <strong>Circles: 5</strong> <br>
+      <strong>Trained by Tunapanda:</strong> 8 roles. 3 projects. Metrics up 9.3% MoM <br><br>
+      <strong>Produced by Tunapanda:</strong> 10 roles. 4 projects. Metrics up 8.0% MoM <br><br>
+      <strong>Powered by Tunapanda:</strong> 6 roles. 3 projects. Metrucs up 7.6% Mom <br><br>
+      <strong>Tunapanda Team:</strong> 7 roles. 3 project. Metrics up 7.7% MoM <br><br>
+      <strong>Anchor Circle:</strong> totally useless, what is it they even do here?? <br><br>
       <strong></strong>
 
 
     </p>
 
     </div>
-
-    <div class="col-sm-4 border border-secondary py-2">
+{% comment %}
+     <div class="col-sm-4 border border-secondary py-2">
         <h3>Filters</h3>
         <form action="" method="get">
             {{ filter.form|crispy }}
             <input type="submit" />
         </form>
     </div>
+{% endcomment %}
   </div>
 </div>
 
@@ -43,20 +44,22 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>Kummitment</th>
-        <th>Kummitor</th>
-        <th>Deadline</th>
-        <th>Status</th>
+        <th>Circle</th>
+        <th>Purpose</th>
+        <th>Lead Link</th>
+        <th>Latest Report</th>
+        <th>OKRs</th>
       </tr>
     </thead>
     <tbody>
-      {% for kummitment in kummitment_list %}
+      {% for circle in circle_list %}
         <div class="row">
           <tr>
-            <td><a href="{{ kummitment.get_absolute_url }}">{{ kummitment.task }}</a></td>
-            <td>{{ kummitment.kummitor }}</td>
-            <td>{{ kummitment.deadline }}</td>
-            <td>{{ kummitment.status }}</td>
+            <td><a href="{{ circle.get_absolute_url }}">{{ circle.name }}</a></td>
+            <td>{{ circle.purpose }}</td>
+            <td>{{ circle.leadlink }}</td>
+            <td>{{ circle.reports }}</td>
+            <td>{{ circle.metrics }}</td>
           </tr>
         </div>
       {% endfor %}
@@ -64,6 +67,7 @@
   </table>
 </div>
 
+{% comment %}
 {% if is_paginated %}
   <ul class="pagination">
     {% if page_obj.has_previous %}
@@ -84,6 +88,7 @@
       <li class="disabled"><span>&raquo;</span></li>
     {% endif %}
   </ul>
-{% endif %}
+{% endif %} #}
+{% endcomment %}
 
 {% endblock %}
