--- a/commitments/templates/managetime/home.html
+++ b/commitments/templates/managetime/home.html
@@ -12,37 +12,74 @@
     {% block content %}
   <body>
     <h1>Learning, Earning, and Problem Solving</h1>
-    <h2>Governance</h2>
+    <blockquote class="blockquote">
+      <p>
+        <em>"Nothing will work unless you do." <br> - Maya Angelou</em>
+      </p>
+    </blockquote>
+
+    <h3>Tunapanda Governance</h3>
     <p>Member Charter, Pandacracy Constitution</p>
 
-<h2>Structure</h2>
-<p>Circles, Roles</p>
+    <blockquote class="blockquote">
+      <p>
+        <em>"We prefer self-government with danger to servitude in tranquility." <br> - Kwame Nkrumah</em>
+      </p>
+    </blockquote>
 
-<h2>Activities</h2>
-<p>Projects, Tasks, Kummitments</p>
+<h3>Tunapanda Structure</h3>
+<p><a href="{% url 'circle-list' %}">Circles</a>, <a href="{% url 'role-list' %}">Roles</a></p>
 
-    <h2>Circle</h2>
-      <table border="1">
-        <thead>
-          <tr>
-            <th>Circle</th>
-            <th>Purpose</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for circle in circles %}
-            <tr>
-              <td>
-                {{ circle.name }}<br>
-                <small style="color: #888">Lead:  {{ circle.leadlink }}</small>
-              </td>
-              <td>
-                {{ circle.purpose }}
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+<h3>Tunapanda Activities</h3>
+<p>Projects, <a href="{% url 'task-list' %}">Tasks</a>, <a href="{% url 'kummitment-list' %}">Kummitments</a></p>
+<blockquote class="blockquote"><p>
+  <em>“There are three qualities that make someone a true professional. These are the ability to work unsupervised, the ability to certify the completion of a job or task and, finally, the ability to behave with integrity at all times.”</em> <br>
+      ― Subroto Bagchi</blockquote>
+</p>
+<br>
+<hr>
+  <br>
+<h1>Member Growth</h1>
+<p>Tunapanda Members want to grow in many dimensions. We always look for the win-win-win: improving the world, improving our communities, and improving ourselves. Thus, each of us does what we can to become more <strong>healthy, wealthy, wise, and connected</strong> while ensuring Tunapanda and the people we work with are better off than we were yesterday.
+</p>
+<blockquote class="blockquote">
+<p>
+  <em>"I think it is possible for ordinary people to choose to be extraordinary." <br> - Elon Musk</em>
+</p>
+</blockquote>
+
+<h3>Healthy</h3>
+<h3>Wealthy</h3>
+
+<blockquote class="blockquote">
+<p>
+  <em>In short, the way to wealth, if you desire it, is as plain as the way to market. It depends chiefly on two words: industry and frugality. Waste neither time nor money, but make the best use of both.<br> - Benjamin Franklin</em>
+</p>
+</blockquote>
+
+
+<h3>Wise</h3>
+
+<blockquote class="blockquote">
+<p>
+  <em>Try to be a rainbow in someone’s cloud. <br> - Maya Angelou</em>
+</p>
+</blockquote>
+
+
+
+<h3>Connected</h3>
+
+<blockquote class="blockquote">
+<p>
+  <em>This is the true joy in life, the being used for a purpose recognized by yourself as a mighty one; the being thoroughly worn out before you are thrown on the scrap heap; the being a force of Nature instead of a feverish selfish little clod of ailments and grievances complaining that the world will not devote itself to making you happy. <br><br>
+      I am of the opinion that my life belongs to the community, and as long as I live, it is my privilege to do for it whatever I can. I want to be thoroughly used up when I die, for the harder I work, the more I live. Life is no ‘brief candle’ to me. It ia a sort of splendid torch which I have got hold of for a moment, and I want to make it burn as brightly as possible before handing it on to the future generations. <br>
+      - George Bernard Shaw</em>
+</p>
+</blockquote>
+
+
+<br><br>
     {% endblock %}
   </body>
 </html>
