Fix login template problem, add stying to forms, add to homepage

--- a/commitments/templates/managetime/home.html
+++ b/commitments/templates/managetime/home.html
@@ -19,7 +19,7 @@
     </blockquote>
 
     <h3>Tunapanda Governance</h3>
-    <p>Member Charter, Pandacracy Constitution</p>
+    <p>Tunapanda Community Charter, Pandacracy Constitution</p>
 
     <blockquote class="blockquote">
       <p>
@@ -49,6 +49,13 @@
 </blockquote>
 
 <h3>Healthy</h3>
+
+<blockquote class="blockquote">
+  <p>
+    <em>"Early to bed and early to rise, makes a man healthy, wealthy, and wise." <br> - Benjamin Franklin</em>
+  </p>
+</blockquote>
+
 <h3>Wealthy</h3>
 
 <blockquote class="blockquote">
