--- a/commitments/templates/managetime/kummitment_form.html
+++ b/commitments/templates/managetime/kummitment_form.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<div class="row">
+<div class="row w-50">
   <div class="col-sm-12 col-md-12 col-lg-12">
     <h3 class="text-center">"Define Kummitment"</h3>
         {% if user.is_authenticated %}
