--- a/commitments/templates/managetime/kummitment_detail.html
+++ b/commitments/templates/managetime/kummitment_detail.html
@@ -12,7 +12,7 @@
 <div class="border">
   <h4><a href="{% url 'task-detail' kummitment.task.id %}">{{ kummitment.task.subject }}</a> <small>(kummittor: {{ kummitment.kummitor }}) </small></h4>
   <p>
-    Description:  {{ kummitment.task.description }} <br>
+    Success actions:  {{ kummitment.task.successactions }} <br>
     Evidence of done:  {{ kummitment.task.doneevidence }} <br>
     Deadline:  {{ kummitment.task.deadline }}</p>
     {% if task.circle %} <p>Circle:  {{ kummitment.task.circle }}</p> {% endif %}
@@ -23,7 +23,7 @@
 
 <h2>Kummitment</h2>
 <div class="border">
-  <h4><a href="{% url 'kummitment-detail' kummitment.id %}">{{ kummitment.description }}</a></h4>
+  <h4><a href="{% url 'kummitment-detail' kummitment.id %}">{{ kummitment.successactions }}</a></h4>
   {% if kummitment.needhelp %} <strong>Assistance requested.</strong> <em>"{{ kummitment.problemneedinghelp }}"</em>
   {% else %} <em><small>No assistance requested to date.</small></em>
   {% endif %} <br> <br>
