Cleaning up home page and adding buttons for tasks/kummitments

--- a/commitments/templates/managetime/role_detail.html
+++ b/commitments/templates/managetime/role_detail.html
@@ -3,7 +3,7 @@
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
 <li class="breadcrumb-item"><a href="{% url 'circle-list' %}">Circles</a></li>
-{# <li class="breadcrumb-item"><a href="{% url 'role-list' %}">Roles</a></li> #}
+<li class="breadcrumb-item"><a href="{% url 'role-list' %}">Roles</a></li>
 <li class="breadcrumb-item active">View Role</li>
 {% endblock %}
 
