--- a/commitments/templates/managetime/circle_filter.html
+++ b/commitments/templates/managetime/circle_filter.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load crispy_forms_tags %}
+{% load bootstrap3 %}
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
