--- a/commitments/templates/managetime/role_filter.html
+++ b/commitments/templates/managetime/role_filter.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load crispy_forms_tags %}
+{% load bootstrap3 %}
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
@@ -31,7 +31,7 @@
     <div class="col-sm-4 border border-secondary py-2">
         <h3>Filters</h3>
         <form action="" method="get">
-            {{ filter.form|crispy }}
+            {% bootstrap_form filter.form %}
             <input type="submit" />
         </form>
     </div>
