--- a/commitments/templates/managetime/task_form.html
+++ b/commitments/templates/managetime/task_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load crispy_forms_tags %}
+{% load bootstrap3 %}
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'kummithome' %}">Kummit</a></li>
@@ -14,13 +14,14 @@
   <div class="col-sm-12 col-md-12 col-lg-12">
     <h3 class="text-center">"Define Task"</h3>
         {% if user.is_authenticated %}
-        <p>Task by: {{ user.username }}<p>
+          <p>Task by: {{ user.username }}<p>
         {% else %}
-        <h2>Login, please</h2>
+          <h2>Login, please</h2>
         {% endif %}
+
         <form method="POST">{% csrf_token %}
           <table border="1">
-            {% crispy form %}
+            {% bootstrap_form form %}
           </table>
         </form>
   </div>
