--- a/commitments/templates/base.html
+++ b/commitments/templates/base.html
@@ -27,9 +27,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mainMenu">
-            {% if user.is_authenticated %}
-
-                <li class="nav-item dropdown">
+            <li class="nav-item dropdown">
+                  {% if request.user.is_authenticated %}
                   <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #FFFFFF;">
                     {{ user.username }}
                   </a>
@@ -39,14 +38,14 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                   </div>
+                  {% else %}
+                    <form class="form-inline ml-auto">
+                      <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                      <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                    </form>
+                  {% endif %}
                 </li>
               </ul>
-            {% else %}
-              <form class="form-inline ml-auto">
-                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-              </form>
-            {% endif %}
           </div>
         </div>
       </nav>
