--- a/commitments/templates/base.html
+++ b/commitments/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}<!DOCTYPE html>
 <html lang="en" dir="ltr">
+  
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Kummit: {% if user.is_authenticated %}{{ user.username }}{% endif %}{% endblock %}</title>
@@ -7,8 +8,11 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.min.css' %}">
-    {% block stylesheet %}{% endblock %}
+
+    {% block extracss %}{% endblock extracss %}
+    {% block stylesheet %}{% endblock stylesheet %}
   </head>
+
   <body>
     {% block body %}
       <nav class="navbar navbar-expand-sm" style="background-color: #006F3A;">
@@ -23,45 +27,48 @@
             </div>
           </ul>
           <ul class="nav navbar-nav">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="mainMenu">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainMenu">
             <li class="nav-item dropdown">
-                  {% if request.user.is_authenticated %}
-                  <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #FFFFFF;">
-                    {{ user.username }}
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                    <a class="dropdown-item" href="#">My account</a>
-                    <a class="dropdown-item" href="#">Change password</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-                  </div>
-                  {% else %}
-                    <form class="form-inline ml-auto">
-                      <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                      <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-                    </form>
-                  {% endif %}
-                </li>
-              </ul>
-          </div>
+              {% if request.user.is_authenticated %}
+                <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #FFFFFF;">
+                  {{ user.username }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                  <a class="dropdown-item" href="#">My account</a>
+                  <a class="dropdown-item" href="#">Change password</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                </div>
+              {% else %}
+                <form class="form-inline ml-auto">
+                  <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                  <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                </form>
+              {% endif %}
+            </li>
+          </ul>
         </div>
-      </nav>
-      <div class="container">
-        <ol class="breadcrumb my-4">
-          {% block breadcrumb %}
-          {% endblock %}
-        </ol>
-        {% block content %}
-        {% endblock %}
       </div>
-    {% endblock body %}
+    </nav>
+    <div class="container">
+      <ol class="breadcrumb my-4">
+        {% block breadcrumb %}
+        {% endblock %}
+      </ol>
+
+      {% block content %}
+      {% endblock %}  
+    </div>
+
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
-    <script type="text/javascript"> $('.datepicker').datepicker(); </script>
+    
+    {% block extrajs %}{% endblock extrajs %}
   </body>
+  {% endblock body %}
 </html>
