--- a/commitments/templates/base_accounts.html
+++ b/commitments/templates/base_accounts.html
@@ -4,7 +4,7 @@
 
 {% block stylesheet %}
   <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
-{% endblock %}
+{% endblock stylesheet %}
 
 {% block body %}
   <div class="container">
