--- a/commitments/templates/managetime/task_form.html
+++ b/commitments/templates/managetime/task_form.html
@@ -18,10 +18,9 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="row w-50">
-  <div class="col-sm-12 col-md-12 col-lg-12">
-    <h3 class="text-center">"Define Task"</h3>
+  <div class="row w-50">
+    <div class="col-sm-12 col-md-12 col-lg-12">
+      <h3 class="text-center">"Define Task"</h3>
         {% if user.is_authenticated %}
           <p>Task by: {{ user.username }}<p>
         {% else %}
@@ -29,11 +28,10 @@
         {% endif %}
 
         <form method="POST">{% csrf_token %}
-          <table border="1">
             {% bootstrap_form form %}
-          </table>
+            <hr />
+            {% bootstrap_button "Save Task" button_type="submit" button_class="btn-primary" %}
         </form>
+    </div>
   </div>
-</div>
-
 {% endblock %}
