--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,42 +1,37 @@
-<nav class="navbar navbar-expand-sm" style="background-color: #006F3A;">
+<nav class="navbar navbar-dark navbar-expand-sm" style="background-color: #006F3A;">
   <div class="container">
-    <ul class="nav navbar-nav">
-      {{#link-to 'index' class="navbar-nav" style="color: #FFFFFF;"}}Tunapanda Kummit{{/link-to}}
-    </ul>
-    <ul class="nav navbar-nav w-50">
-      <div class="btn-group btn-group-sm" role="group" aria-label="Portal and Swag">
-        <a class="btn btn-primary" href="http://portal.tunapanda.org" target="_blank" role="button" style="background-color: #564840; border-color: #FFFFFF;">Portal</a>
-        <a class="btn btn-primary" target="_blank" href="http://xavierproject.tunapanda.org" role="button" style="background-color: #6FCF3F; border-color: #FFFFFF;">Swag</a>
-      </div>
-    </ul>
-    <ul class="nav navbar-nav">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainMenu">
-        <li class="nav-item dropdown">
-          {{#if request.user.is_authenticated }}
-          <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-            style="color: #FFFFFF;">
-            {{ user.username }}
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-            <a class="dropdown-item" href="#">My account</a>
-            <a class="dropdown-item" href="#">Change password</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Log out</a>
-          </div>
-          {{else}}
-          <form class="form-inline ml-auto">
-            {{#link-to 'login' class="btn btn-outline-secondary"}}Log in{{/link-to}}
-            {{#link-to 'signup' class="btn btn-primary ml-2"}}Sign Up{{/link-to}}
-          </form>
-          {{/if}}
-        </li>
-        </div>
-    </ul>
+    {{#link-to 'index' class="navbar-brand" style="color: #FFFFFF;"}}Tunapanda Kummit{{/link-to}}
+    <div class="mr-auto btn-group btn-group-sm" role="group" aria-label="Portal and Swag">
+      <a class="btn btn-primary" href="http://portal.tunapanda.org" target="_blank" role="button" style="background-color: #564840; border-color: #FFFFFF;">Portal</a>
+      <a class="btn btn-primary" target="_blank" href="http://xavierproject.tunapanda.org" role="button" style="background-color: #6FCF3F; border-color: #FFFFFF;">Swag</a>
     </div>
+    <ul class="nav navbar-nav">
+      <li class="nav-item dropdown">
+        {{#if me.isAuthenticated }}
+          {{#bs-dropdown tagName="a" as |dd|}}
+            {{#dd.toggle}}{{ me.user.username }} <span class="caret"></span>{{/dd.toggle}}
+            {{#dd.menu as |menu|}}
+              {{#menu.item}}
+                {{#menu.link-to "index"}}My Account{{/menu.link-to}}
+              {{/menu.item}}
+              {{#menu.item}}
+                {{#menu.link-to "index"}}Change Password{{/menu.link-to}}
+              {{/menu.item}}
+              {{menu.divider}}
+              {{#menu.item}}
+                {{#menu.link-to "index"}}Log Out{{/menu.link-to}}
+              {{/menu.item}}
+            {{/dd.menu}}
+          {{/bs-dropdown}}
+        {{else}}
+        <form class="form-inline ml-auto">
+          {{#link-to 'login' class="btn btn-outline-secondary"}}Log in{{/link-to}}
+          {{#link-to 'signup' class="btn btn-primary ml-2"}}Sign Up{{/link-to}}
+        </form>
+        {{/if}}
+      </li>
+    </ul>
+  </div>
 </nav>
 <div class="container">
   {{!-- <ol class="breadcrumb my-4">
