--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,3 +1,6 @@
+<header class="primary-header">
+
+</header>
 <nav class="navbar navbar-dark navbar-expand-sm" style="background-color: #006F3A;">
   <div class="container">
     {{#link-to 'index' class="navbar-brand" style="color: #FFFFFF;"}}Tunapanda Kummit{{/link-to}}
@@ -8,21 +11,21 @@
     <ul class="nav navbar-nav">
       <li class="nav-item dropdown">
         {{#if me.isAuthenticated }}
-          {{#bs-dropdown tagName="a" as |dd|}}
-            {{#dd.toggle}}{{ me.user.username }} <span class="caret"></span>{{/dd.toggle}}
-            {{#dd.menu as |menu|}}
-              {{#menu.item}}
+          <BsDropdown @tagName="a" as |dd|>
+            <dd.toggle>{{ me.user.username }} <span class="caret"></span></dd.toggle>
+            <dd.menu as |menu|>
+              <menu.item>
                 {{#menu.link-to "index"}}My Account{{/menu.link-to}}
-              {{/menu.item}}
-              {{#menu.item}}
+              </menu.item>
+              <menu.item>
                 {{#menu.link-to "index"}}Change Password{{/menu.link-to}}
-              {{/menu.item}}
-              {{menu.divider}}
-              {{#menu.item}}
+              </menu.item>
+              <menu.divider />
+              <menu.item>
                 {{#menu.link-to "index"}}Log Out{{/menu.link-to}}
-              {{/menu.item}}
-            {{/dd.menu}}
-          {{/bs-dropdown}}
+              </menu.item>
+            </dd.menu>
+          </BsDropdown>
         {{else}}
         <form class="form-inline ml-auto">
           {{#link-to 'login' class="btn btn-outline-secondary"}}Log in{{/link-to}}
@@ -34,10 +37,20 @@
   </div>
 </nav>
 <div class="container">
-  {{!-- <ol class="breadcrumb my-4">
-    {% block breadcrumb %} {% endblock %}
-  </ol> --}}
-
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      {{#link-to 'calendar' class="nav-link"}}Calendar{{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'tasks' class="nav-link"}}Tasks{{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'projects' class="nav-link"}}Projects{{/link-to}}
+    </li>
+    <li class="nav-item">
+      {{#link-to 'kummitments' class="nav-link"}}Kummitments{{/link-to}}
+    </li>
+  </ul>
   {{outlet}}
 </div>
 
