Improve task form and now functional

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,2 +1,10 @@
 
 @import "ember-bootstrap/bootstrap";
+
+
+@import "ember-power-select/themes/bootstrap";
+
+@import "ember-power-select";
+
+@import "ember-basic-dropdown";
+@import "ember-power-calendar";
