--- a/frontend/app/templates/tasks/make.hbs
+++ b/frontend/app/templates/tasks/make.hbs
@@ -3,11 +3,86 @@
   {{form.element controlType="textarea" label="Task Description" placeholder="Task Description" property="description" helpText="Explain what will need to happen in order for this task to be accomplished"}}
   {{form.element controlType="textarea" label="Evidence of Done" placeholder="Evidence of Done" property="done_evidence" helpText="What deliverables, links, assertions (by clients, partners, or Members), or other evidence are required to show completion
   of this task?"}}
-  {{form.element controlType="date" label="Startline" placeholder="Startline" property="start_date" helpText="When could work begin?"}}
-  {{form.element controlType="date" label="Deadline" placeholder="Deadline" property="deadline" helpText=""}}
-  {{form.element controlType="text" label="Project" placeholder="Project" property="project" helpText="If this task is for a project, which project?"}}
-  {{form.element controlType="text" label="Role" placeholder="Role" property="role" helpText="If this task is for a role, which project?"}}
-  {{form.element controlType="text" label="Circle" placeholder="Cicle" property="circle" helpText="If this task is for a circle, which project?"}}
+  {{#form.group}}
+    <label class="col-form-label col-md-4">Start</label>
+    <div class="col-md-8">
+      {{#power-datepicker selected=model.startDate onSelect=(action (mut model.startDate) value="date") as |dp|}}
+        {{#dp.trigger tabindex="-1"}}
+          <input type="text" class="form-control" value={{moment-format model.startDate 'DD/MM/YYYY'}}>
+        {{/dp.trigger}}
 
+        {{#dp.content class="demo-datepicker-small"}}
+          {{dp.nav}}
+          {{dp.days}}
+        {{/dp.content}}
+      {{/power-datepicker}}
+    </div>
+  {{/form.group}}
+  {{#form.group}}
+    <label class="col-form-label col-md-4">Deadline</label>
+    <div class="col-md-8">
+      {{#power-datepicker selected=model.deadline onSelect=(action (mut model.deadline) value="date") as |dp|}}
+        {{#dp.trigger tabindex="-1"}}
+          <input type="text" class="form-control" value={{moment-format model.deadline 'DD/MM/YYYY'}}>
+        {{/dp.trigger}}
+
+        {{#dp.content class="demo-datepicker-small"}}
+          {{dp.nav}}
+          {{dp.days}}
+        {{/dp.content}}
+      {{/power-datepicker}}
+    </div>
+  {{/form.group}}
+  {{#form.group}}
+    <label class="col-form-label col-md-4">Project</label>
+    <div class="col-md-8">
+      {{#data-power-select
+        modelName='project'
+        params=(hash limit=10)
+        queryKey='title'
+        params=(hash results=10)
+        onchange=(action (mut model.project))
+        selected=model.project
+        placeholder="Search Projects..."
+        as |project|
+        }}
+        {{user.email}}
+      {{/data-power-select}}
+    </div>
+  {{/form.group}}
+  {{#form.group}}
+    <label class="col-form-label col-md-4">Role</label>
+    <div class="col-md-8">
+      {{#data-power-select
+        modelName='role'
+        params=(hash limit=10)
+        queryKey='title'
+        params=(hash results=10)
+        onchange=(action (mut model.project))
+        selected=model.project
+        placeholder="Search Roles..."
+        as |role|
+        }}
+        {{role.name}}
+      {{/data-power-select}}
+    </div>
+  {{/form.group}}
+  {{#form.group}}
+    <label class="col-form-label col-md-4">Circle</label>
+    <div class="col-md-8">
+      {{#data-power-select
+      modelName='circle'
+      params=(hash limit=10)
+      queryKey='title'
+      params=(hash results=10)
+      onchange=(action (mut model.circle))
+      selected=model.circle
+      placeholder="Search Circles..."
+      as |circle|
+      }}
+      {{circle.name}}
+      {{/data-power-select}}
+    </div>
+    {{/form.group}}
   {{bs-button defaultText="Submit" type="primary" buttonType="submit"}}
 {{/bs-form}}
