--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,10 +1,15 @@
 
+@import "common/variables";
+
+$primary: $primary-green;
+
 @import "ember-bootstrap/bootstrap";
 
+@import "common/typography";
+@import "common/forms";
 
-@import "ember-power-select/themes/bootstrap";
+@import "layout/header";
 
 @import "ember-power-select";
-
 @import "ember-basic-dropdown";
 @import "ember-power-calendar";
