--- a/frontend/app/templates/tasks/make.hbs
+++ b/frontend/app/templates/tasks/make.hbs
@@ -1,88 +1,71 @@
-{{#bs-form formLayout="horizontal" model=model onSubmit=(action "submit") as |form|}}
-  {{form.element controlType="text" label="Task Name" placeholder="Task Name" property="subject" helpText="Write a short name describing the task"}}
-  {{form.element controlType="textarea" label="Task Description" placeholder="Task Description" property="description" helpText="Explain what will need to happen in order for this task to be accomplished"}}
-  {{form.element controlType="textarea" label="Evidence of Done" placeholder="Evidence of Done" property="done_evidence" helpText="What deliverables, links, assertions (by clients, partners, or Members), or other evidence are required to show completion
-  of this task?"}}
-  {{#form.group}}
-    <label class="col-form-label col-md-4">Start</label>
-    <div class="col-md-8">
-      {{#power-datepicker selected=model.startDate onSelect=(action (mut model.startDate) value="date") as |dp|}}
-        {{#dp.trigger tabindex="-1"}}
-          <input type="text" class="form-control" value={{moment-format model.startDate 'DD/MM/YYYY'}}>
-        {{/dp.trigger}}
-
-        {{#dp.content class="demo-datepicker-small"}}
+<div class="form-container">
+  <h1 class="page-title">Create a new Task</h1>
+  <BsForm @model={{model}} @onSubmit={{action "submit"}} as |form|>
+    <div class="form-primary-fields row">
+      <div class="col">
+        <form.element @controlType="text" @label="Task Name*" @placeholder="Task Name" @property="subject" @helpText="Write a short name describing the task" @required=true />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+          <form.element @property="project" as |el|>
+      <DataPowerSelect
+        @modelName='project'
+        @onchange={{action (mut el.value)}}
+        @selected={{el.value}}
+        @placeholder="Select Project"
+        as |project|>
+          {{project.name}}
+        </DataPowerSelect>
+    </form.element>
+      <form.element @property="role" as |el|>
+      <DataPowerSelect
+        @modelName='role'
+        @onchange={{action (mut el.value)}}
+        @selected={{el.value}}
+        @placeholder="Select Role"
+        as |role|>
+          {{role.name}}
+        </DataPowerSelect>
+    </form.element>
+    <form.element @property="circle" as |el|>
+      <DataPowerSelect
+        @modelName='circle'
+        @onchange={{action (mut el.value)}}
+        @selected={{el.value}}
+        @placeholder="Select Circle"
+        as |circle|>
+          {{circle.name}}
+        </DataPowerSelect>
+    </form.element>
+    <form.element @label="Start Date" @property="startDate" as |el|>
+      <PowerDatepicker @selected={{el.value}} @onSelect={{action (mut el.value) value="date"}} as |dp|>
+        <dp.trigger tabindex="-1">
+          <input id={{el.id}} type="text" class="form-control" value={{moment-format el.value 'DD/MM/YYYY'}}>
+        </dp.trigger>
+        <dp.content class="demo-datepicker-small">
           {{dp.nav}}
           {{dp.days}}
-        {{/dp.content}}
-      {{/power-datepicker}}
-    </div>
-  {{/form.group}}
-  {{#form.group}}
-    <label class="col-form-label col-md-4">Deadline</label>
-    <div class="col-md-8">
-      {{#power-datepicker selected=model.deadline onSelect=(action (mut model.deadline) value="date") as |dp|}}
-        {{#dp.trigger tabindex="-1"}}
-          <input type="text" class="form-control" value={{moment-format model.deadline 'DD/MM/YYYY'}}>
-        {{/dp.trigger}}
-
-        {{#dp.content class="demo-datepicker-small"}}
+        </dp.content>
+      </PowerDatepicker>
+    </form.element>
+    <form.element @label="Deadline" @property="deadline" as |el|>
+      <PowerDatepicker @selected={{el.value}} @onSelect={{action (mut el.value) value="date"}} as |dp|>
+        <dp.trigger tabindex="-1">
+          <input id={{el.id}} type="text" class="form-control" value={{moment-format el.value 'DD/MM/YYYY'}}>
+        </dp.trigger>
+        <dp.content class="demo-datepicker-small">
           {{dp.nav}}
           {{dp.days}}
-        {{/dp.content}}
-      {{/power-datepicker}}
+        </dp.content>
+      </PowerDatepicker>
+    </form.element>
+      </div>
+      <div class="col-8">
+        <form.element @controlType="textarea" @label="Task Description" @placeholder="Task Description" @property="description" @helpText="Explain what will need to happen in order for this task to be accomplished" />
+        <form.element @controlType="textarea" @label="Evidence of Done" @placeholder="Evidence of Done" @property="done_evidence" @helpText="What deliverables, links, assertions (by clients, partners, or Members), or other evidence are required to show completion of this task?" />
+        <BsButton @defaultText="Create" @type="primary" @buttonType="submit" @block=true />
+      </div>
     </div>
-  {{/form.group}}
-  {{#form.group}}
-    <label class="col-form-label col-md-4">Project</label>
-    <div class="col-md-8">
-      {{#data-power-select
-        modelName='project'
-        params=(hash limit=10)
-        queryKey='title'
-        params=(hash results=10)
-        onchange=(action (mut model.project))
-        selected=model.project
-        placeholder="Search Projects..."
-        as |project|
-        }}
-        {{user.email}}
-      {{/data-power-select}}
-    </div>
-  {{/form.group}}
-  {{#form.group}}
-    <label class="col-form-label col-md-4">Role</label>
-    <div class="col-md-8">
-      {{#data-power-select
-        modelName='role'
-        params=(hash limit=10)
-        queryKey='title'
-        params=(hash results=10)
-        onchange=(action (mut model.project))
-        selected=model.project
-        placeholder="Search Roles..."
-        as |role|
-        }}
-        {{role.name}}
-      {{/data-power-select}}
-    </div>
-  {{/form.group}}
-  {{#form.group}}
-    <label class="col-form-label col-md-4">Circle</label>
-    <div class="col-md-8">
-      {{#data-power-select
-      modelName='circle'
-      params=(hash limit=10)
-      queryKey='title'
-      params=(hash results=10)
-      onchange=(action (mut model.circle))
-      selected=model.circle
-      placeholder="Search Circles..."
-      as |circle|
-      }}
-      {{circle.name}}
-      {{/data-power-select}}
-    </div>
-    {{/form.group}}
-  {{bs-button defaultText="Submit" type="primary" buttonType="submit"}}
-{{/bs-form}}
+  </BsForm>
+</div>
