--- a/frontend/app/styles/common/typography.scss
+++ b/frontend/app/styles/common/typography.scss
@@ -7,6 +7,14 @@ body {
   font-weight: 600;
 }
 
+// .btn-secondary {
+//   color: #fff;
+//   background-color: $secondary-brown;
+//   font-weight: 600;
+
+//   &:hover
+// }
+
 .page-title {
   color: #688643;
   font-size: 1.6rem;
