--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,7 +3,7 @@
 
     <nav class="navbar">
 
-    {{#link-to 'index' class="navbar-brand"}}Kummit{{/link-to}}
+    {{#link-to 'index' class="navbar-brand"}}<img src="/images/swag_logo.svg" class="kummit-logo" />  Kummit{{/link-to}}
     {{!-- <div class="mr-auto btn-group btn-group-sm" role="group" aria-label="Portal and Swag">
       <a class="btn btn-primary" href="http://portal.tunapanda.org" target="_blank" role="button" style="background-color: #564840; border-color: #FFFFFF;">Portal</a>
       <a class="btn btn-primary" target="_blank" href="http://xavierproject.tunapanda.org" role="button" style="background-color: #6FCF3F; border-color: #FFFFFF;">Swag</a>
